--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -13,4 +13,4 @@ resources:
   - ./vector/ks.yaml
   - ./victoria-metrics/ks.yaml
   - ./grafana/ks.yaml
-  - ./ntfy/kustomization.yaml
+  - ./ntfy/ks.yaml
