--- a/kubernetes/apps/observability/ntfy/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/ntfy/app/helmrelease.yaml
@@ -36,6 +36,11 @@ spec:
               TZ: ${TIMEZONE}
               NTFY_DEBUG: false
               NTFY_BASE_URL: https://ntfy.${SECRET_DOMAIN}
+              NTFY_CACHE_FILE: /var/cache/ntfy/cache.db
+              NTFY_AUTH_FILE: /var/cache/ntfy/auth.db
+              NTFY_AUTH_DEFAULT_ACCESS: deny-all
+              NTFY_ATTACHMENT_CACHE_DIR: /var/cache/ntfy/attachments
+              NTFY_ENABLE_LOGIN: true
               # TODO: change port
               #NTFY_METRICS_LISTEN_HTTP: :9090
             args:
