--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -356,7 +356,7 @@ spec:
     sidecar:
       dashboards:
         reloadURL: "http://localhost:3000/api/admin/provisioning/dashboards/reload"
-        skipReload: false
+        skipReload: true
         enabled: true
         searchNamespace: ALL
         labelValue: ""
