--- a/kubernetes/apps/argocd/flamingo/app/kustomization.yaml
+++ b/kubernetes/apps/argocd/flamingo/app/kustomization.yaml
@@ -3,3 +3,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
+configMapGenerator:
+  - name: argocd-cm
+    behavior: merge
+    literals:
+      - "kustomize.buildOptions=--enable-helm"
+  - name: argocd-cm
+    behavior: merge
+    files:
+      - resource.exclusions
+generatorOptions:
+  disableNameSuffixHash: true
