--- a/kubernetes/apps/argocd/kustomization.yaml
+++ b/kubernetes/apps/argocd/kustomization.yaml
@@ -1,6 +1,18 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: argocd
 resources:
   - ./namespace.yaml
   - ./flamingo/ks.yaml
+configMapGenerator:
+  - name: argocd-cm
+    behavior: merge
+    literals:
+      - "kustomize.buildOptions=--enable-helm"
+  - name: argocd-cm
+    behavior: merge
+    files:
+      - resource.exclusions
+generatorOptions:
+  disableNameSuffixHash: true
