--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -369,15 +369,14 @@ spec:
         allow_loading_unsigned_plugins: victoriametrics-datasource
     sidecar:
       dashboards:
-        # reloadURL: "http://localhost:3000/api/admin/provisioning/dashboards/reload"
-        # skipReload: false
         enabled: true
         searchNamespace: ALL
+        labelValue: ""
         label: grafana_dashboard
         folderAnnotation: grafana_folder
-        # provider:
-        #   disableDelete: true
-        #   foldersFromFilesStructure: true
+        provider:
+          disableDelete: true
+          foldersFromFilesStructure: true
       datasources:
         enabled: true
         searchNamespace: ALL
@@ -389,7 +388,7 @@ spec:
       - natel-discrete-panel
       - pr0ps-trackmap-panel
       - vonage-status-panel
-      - "https://github.com/VictoriaMetrics/grafana-datasource/releases/download/v0.5.0/victoriametrics-datasource-v0.5.0.zip;victoriametrics-datasource"
+      - "https://github.com/VictoriaMetrics/grafana-datasource/releases/download/v0.7.0/victoriametrics-datasource-v0.7.0.zip;victoriametrics-datasource"
     serviceMonitor:
       enabled: true
     ingress:
