--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -113,6 +113,12 @@ audio:
     yell:
       # Minimum score that triggers an audio event (default: shown below)
       threshold: 0.8
+    bark:
+      # Minimum score that triggers an audio event (default: shown below)
+      threshold: 0.8
+    fire_alarm:
+      # Minimum score that triggers an audio event (default: shown below)
+      threshold: 0.8
 
 # Optional: logger verbosity settings
 logger:
@@ -170,7 +176,7 @@ ffmpeg:
   # If set too low, frigate will retry a connection to the camera's stream too frequently, using up the limited streams some cameras can allow at once
   # If set too high, then if a ffmpeg crash or camera stream timeout occurs, you could potentially lose up to a maximum of retry_interval second(s) of footage
   # NOTE: this can be a useful setting for Wireless / Battery cameras to reduce how much footage is potentially lost during a connection timeout.
-  retry_interval: 10
+  # retry_interval: 10
 
 # Optional: Detect configuration
 # NOTE: Can be overridden at the camera level
@@ -285,7 +291,7 @@ motion:
   # Optional: Height of the resized motion frame  (default: 100)
   # Higher values will result in more granular motion detection at the expense of higher CPU usage.
   # Lower values result in less CPU, but small changes may not register as motion.
-  frame_height: 100
+  frame_height: 150
   # Optional: motion mask
   # NOTE: see docs for more detailed info on creating masks
   mask:
@@ -296,7 +302,7 @@ motion:
   # for daytime.
   improve_contrast: True
   # Optional: Delay when updating camera motion through MQTT from ON -> OFF (default: shown below).
-  mqtt_off_delay: 30
+  # mqtt_off_delay: 30
 
 # Optional: Record configuration
 # NOTE: Can be overridden at the camera level
@@ -335,14 +341,14 @@ record:
   # Optional: Event recording settings
   events:
     # Optional: Number of seconds before the event to include (default: shown below)
-    pre_capture: 5
+    # pre_capture: 5
     # Optional: Number of seconds after the event to include (default: shown below)
-    post_capture: 5
+    # post_capture: 5
     # Optional: Objects to save recordings for. (default: all tracked objects)
     # objects:
     #   - person
     # Optional: Restrict recordings to objects that entered any of the listed zones (default: no required zones)
-    required_zones: []
+    # required_zones: []
     # Optional: Retention settings for recordings of events
     retain:
       # Required: Default retention days (default: shown below)
@@ -358,8 +364,10 @@ record:
       #       never stored, so setting the mode to "all" here won't bring them back.
       mode: active_objects
       # Optional: Per object retention days
-      objects:
-        person: 30
+      # objects:
+      #   person: 30
+      #   car: 30
+      #   bus: 30
 
 # Optional: Configuration for the jpg snapshots written to the clips directory for each event
 # NOTE: Can be overridden at the camera level
@@ -506,9 +514,9 @@ cameras:
       inside_gates:
         # Required: List of x,y coordinates to define the polygon of the zone.
         # NOTE: Presence in a zone is evaluated only based on the bottom center of the objects bounding box.
-        coordinates: 567,360,597,306,508,206,446,265
+        coordinates: 546,360,640,360,640,267,538,182,437,272
         # Optional: Number of consecutive frames required for object to be considered present in the zone (default: shown below).
-        inertia: 8
+        inertia: 5
         # Optional: List of objects that can trigger this zone (default: all tracked objects)
         objects:
           - person
@@ -548,17 +556,17 @@ cameras:
       # Optional: height to resize the snapshot to (default: shown below)
       height: 270
       # Optional: jpeg encode quality (default: shown below)
-      quality: 90
+      quality: 100
       # Optional: Restrict mqtt messages to objects that entered any of the listed zones (default: no required zones)
       required_zones: []
 
     # Optional: Configuration for how camera is handled in the GUI.
-    ui:
+    # ui:
       # Optional: Adjust sort order of cameras in the UI. Larger numbers come later (default: shown below)
       # By default the cameras are sorted alphabetically.
-      order: 0
+      # order: 0
       # Optional: Whether or not to show the camera in the Frigate UI (default: shown below)
-      dashboard: True
+      # dashboard: True
 
     # Optional: connect to ONVIF camera
     # to enable PTZ controls.
@@ -658,7 +666,7 @@ telemetry:
   # Optional: Configure system stats
   stats:
     # Enable AMD GPU stats (default: shown below)
-    amd_gpu_stats: True
+    amd_gpu_stats: False
     # Enable Intel GPU stats (default: shown below)
     intel_gpu_stats: False
     # Enable network bandwidth stats monitoring for camera ffmpeg processes, go2rtc, and object detectors. (default: shown below)
