--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -35,6 +35,9 @@ stringData:
     MOSQUITTO_MQTT_PASSWORD: ENC[AES256_GCM,data:90pu/ZiV9CfcMA==,iv:Xutd2jzZBHWuRE9U8Fh1vOhaQv3ZE/4VgYg4R8NTFUA=,tag:mMqbF0/DoKNMsbKlQ/wdKQ==,type:str]
     ARGOCD_ADMIN_PASSWORD: ENC[AES256_GCM,data:DEpNeAvsBa0KMA==,iv:h9Bw9cBAv/sVfKjWrXf0tZcBPtZTAajI41YRBtRXac8=,tag:dypXvKPHdeNtfkFtra7zSQ==,type:str]
     GITHUB_TOKEN: ENC[AES256_GCM,data:C3WUuAAv3rn4F79VLX7i9tE9L9cGKjX+gqwfZYKpfkmdjb08oHNPTw==,iv:FBKCEK46VEgD9YNLITnE0kmjAyN9NMH9by7M8lLyR9M=,tag:o7ti0Vaz30CsaLggI9n7rg==,type:str]
+    HARBOR_DB_PASSWORD: ENC[AES256_GCM,data:u+PvgvX+UmSRjmEGoYCY40zGivQI2A==,iv:b0cyi88IlBb6SqnZnSCTErrGufCnRsG7j5G7/ggLPK8=,tag:I0g7M4NRZ3QeOCT9Sml4Xg==,type:str]
+    HARBOR_DB_USER: ENC[AES256_GCM,data:A8/xWOh9JBA=,iv:PTt8X98giaH5hpjfCYQllMD9fNb5X8EoXEwMfKHVrtY=,tag:3WmX7XSXz17cEub97DVTDg==,type:str]
+    HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:aZNk+qWABVNrKA==,iv:UGzLUsbdr+uR8ZrVrbJN26YAtjAGgqd38Q1UJKG/SOY=,tag:wrNMckae4GrQJzgpfInO2w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -50,8 +53,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-12T19:29:26Z"
-    mac: ENC[AES256_GCM,data:7zF+gW9vUybUrkhn9f5BXsEHuEY7u2essrk8DBvfuj8BJHqyz542FBvUqGG3hUqhCLhtbvdyATwdW2PQhvM6RsZlc/UwDtzU3YhdioPqL1hJjreVbef066per4qWXG/jemEZkxxt+SrkRVaJRrkuejsNF7cPzbC4QNwxCM3ePQs=,iv:eliGG0JnGlxzqLmNmUhKFHSDRJmh1mKS6JVNK7jRbxQ=,tag:79eZ2rVOX47ZLg37eh5iog==,type:str]
+    lastmodified: "2024-04-10T21:41:41Z"
+    mac: ENC[AES256_GCM,data:2rIPZhXd+KqG3jqfIPqE+G+LTv2sOv1bxlgnWcKmtgDKUDcwx9JyL7kZ8PfsTTWu05vowknna1S4IlgFr3jJLghOuFU60LW9zTb0N4eTfzGoE+2XUbaxKybaPiTqBH0gfQUV+SqN3bfnCBKMsY7zZrzo/A+NbytlvQ2HFGw+u1U=,iv:HiHroTn0E4E8YZGOMZVZ9jeFUdA2N9JQYqwfGQvLRm0=,tag:x5SN99ENStaJMXjtel+AXQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
