--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -30,11 +30,11 @@ spec:
       jellyseerr:
         annotations:
           reloader.stakater.com/auto: "true"
-        initContainers:
-          init-db:
-            image:
-              repository: ghcr.io/drag0n141/postgres-init
-              tag: 16
+        # initContainers:
+        #   init-db:
+        #     image:
+        #       repository: ghcr.io/drag0n141/postgres-init
+        #       tag: 16
             # envFrom: &envFrom
             #   - secretRef:
             #       name: jellyseerr-secret
