--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -19,8 +19,10 @@ spec:
       retries: 3
   upgrade:
     cleanupOnFail: true
+    timeout: 15m
     remediation:
       retries: 3
+      strategy: rollback
   uninstall:
     keepHistory: false
   dependsOn:
