--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -20,8 +20,10 @@ spec:
     remediation:
       retries: 3
   upgrade:
+    timeout: 15m
     remediation:
       retries: 3
+      strategy: rollback
   driftDetection:
     mode: enabled
   values:
