--- a/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/tools/helmrelease.yaml
@@ -102,7 +102,7 @@ spec:
         type: cronjob
         cronjob:
           <<: *cronJobSpec
-          schedule: "@daily"
+          schedule: "0 */2 * * *"
         containers:
           main:
             image: *image
