--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -405,7 +405,7 @@ spec:
           set -ex
           mkdir -p /var/lib/grafana/plugins/
           ver=$(curl -s https://api.github.com/repos/VictoriaMetrics/grafana-datasource/releases/latest | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+' | head -1)
-          curl -L https://minio.skynerv.com/artifacts/victoriametrics-datasource-$ver.zip -o /var/lib/grafana/plugins/plugin.tar.gz
+          curl -L https://minio.skynerv.com/artifacts/victoriametrics-datasource-$ver.tar.gz -o /var/lib/grafana/plugins/plugin.tar.gz
           tar -xf /var/lib/grafana/plugins/plugin.tar.gz -C /var/lib/grafana/plugins/
           rm /var/lib/grafana/plugins/plugin.tar.gz
         volumeMounts:
