--- a/kubernetes/apps/storage/harbor/app/kustomization.yaml
+++ b/kubernetes/apps/storage/harbor/app/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 namespace: service
 resources:
   - ./pvc
-  - ./externalsecret.yaml
+  - ./secret.sops.yaml
   - ./helmrelease.yaml
 
 patchesStrategicMerge:
