--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
     logLevel: debug
     externalURL: "https://hcr.${SECRET_DOMAIN}"
     existingSecretAdminPassword: &secret harbor-secret
+    existingSecretAdminPasswordKey: HARBOR_ADMIN_PASSWORD
     imagePullPolicy: IfNotPresent
     expose:
       type: ingress
