--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: service
 stringData:
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:wGRWAmDg1qX1JOJh6aX/hk8nNBYJ+L48,iv:Jmv5VFRDBbdxIpo7BoR2yo/TlNAp3rnWqr3Tai9S24o=,tag:vjUMmtd/kEzBbhsNN6rwXg==,type:str]
+    password: ENC[AES256_GCM,data:JGcQvQdWsNhya3nuS/+0DjMyzAKjD0ij,iv:9jECB5UpA678otwYDbAyRczz1qbSkXIH3bT94DrF+9o=,tag:d6PaMK8EYpyk1OpVv5C3aQ==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:m+Kgeg6X,iv:KKqdOqOBZZQPOJX21E/DocOqwXULTwHzM1TSQGU38Vk=,tag:jPqCYPM1gKC+InUxZNit1g==,type:str]
     POSTGRES_USER: ENC[AES256_GCM,data:D+FYNHk2U60Og12xrBdjP2k=,iv:0l88WtsKdWAfx0z7FVGAKX3zMvnUIfvuhCVQHY9P3RE=,tag:Bhx6GHU8uabJo3pDOjJIGA==,type:str]
     POSTGRES_PASS: ENC[AES256_GCM,data:ZfNQwZmzO3x/gHObdVYbV2ULuKFP,iv:PGRC7/Lg296aYfP2GBUh1pk+VuFOWLqwFACIsbVeLZo=,tag:svozALldrMdXlwEojVnbnA==,type:str]
@@ -29,8 +30,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-10T21:55:48Z"
-    mac: ENC[AES256_GCM,data:/tMrud2XsvExLN2+O60ID4suQFiWzZWckKla4ztoJWhsyNBJbTxn/BJZI8cIjWcpvEP+uVqPsIgpRmi6DRH7Cf0YnPkrNj0JJqJUdkIY60ty2x9PssB75qZSw78O8TONHpIuHSVhI7F4p0q8Hq+2vCQuF5xdfWeXxNLvPxaZRUU=,iv:ctrVSIpYJeJqszOwnMCcwwRkHJqWPkgtkm6qFfMMYMQ=,tag:Fiz1d3gF2poSXmyHKo5BEA==,type:str]
+    lastmodified: "2024-04-15T23:13:20Z"
+    mac: ENC[AES256_GCM,data:fYqkusEGny8cdxvt0FmSy6flEtnp15OZPM6/6Ri6StuJoNQ3U0kRyVI50s0YcgKy5N2RHro/9+04+l1QgZGXLyEdHf/82Y32W7mMGlF1K4jQrecXIyJeKdyhH9CihQAyJG4ULblWnu402HTkrfaDPeDuLTOqER8U3ANgcZBye+I=,iv:c0uMZ5+0WJ6b2OiA6JAGCINeZZfw7mkcSXTfZt5WEW4=,tag:A5UBK7fKePhjdpyiukOJHg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
