--- a/kubernetes/apps/database/redis/app/helmrelease.yaml
+++ b/kubernetes/apps/database/redis/app/helmrelease.yaml
@@ -26,6 +26,11 @@ spec:
     keepHistory: false
   values:
     architecture: standalone
+    commonConfiguration: |-
+      # Enable AOF https://redis.io/topics/persistence#append-only-file
+      appendonly yes
+      # Disable RDB persistence, AOF persistence already enabled.
+      databases 80
     auth:
       enabled: false
       sentinel: false
