--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: harbor
-  namespace: service
+  namespace: storage
 spec:
   interval: 30m
   timeout: 15m
