--- a/kubernetes/apps/storage/harbor/init/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/init/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: home-assistant-code
+  name: harbor-init
 spec:
   interval: 30m
   chart:
