--- a/kubernetes/apps/storage/harbor/init/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/init/helmrelease.yaml
@@ -45,3 +45,8 @@ spec:
             runAsGroup: 568
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
+    service:
+        main:
+          ports:
+            http:
+              port: 8049
