--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: harbor-secret
-    namespace: service
+    namespace: storage
 stringData:
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:wGRWAmDg1qX1JOJh6aX/hk8nNBYJ+L48,iv:Jmv5VFRDBbdxIpo7BoR2yo/TlNAp3rnWqr3Tai9S24o=,tag:vjUMmtd/kEzBbhsNN6rwXg==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:m+Kgeg6X,iv:KKqdOqOBZZQPOJX21E/DocOqwXULTwHzM1TSQGU38Vk=,tag:jPqCYPM1gKC+InUxZNit1g==,type:str]
@@ -24,8 +24,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-16T00:07:49Z"
-    mac: ENC[AES256_GCM,data:BoB5KX1VamKaDkirZ2taPpW+Ih9B8kDujq9Qed0RXVlijnGg9MgehFgUOOhufqR6Fb95c4sMsZrC1KO4ufxwW77mc/SjBHXswdtBXqySL+wzQ64pvnS+52KT8D/rqWrvg/h9mQmR6J7AiIJaS+fs6jSFrAWuCLZrIlVS383ATzI=,iv:FA4prq/TBNoQI9BD0i5Xe8gUiIS9JxPlgb1FLRE8eqM=,tag:P76vaCCnXoIT6ZgbTmw8iA==,type:str]
+    lastmodified: "2024-04-16T01:15:27Z"
+    mac: ENC[AES256_GCM,data:X3ZCMUgD9YBzranwpebCqr2NAYszuWQy34kdokesSLUpcutumgghtf3AwCaHAlB9tp6q407CmOkN9oSHQnKH2gOY2dt589R834+4NHJ/WSmdmWwAL9+zbIgdbxelocFTB9p7WxXKp2X4s9e6W60bOWmFDRavmt5TMxlrYiOdOxM=,iv:Cstib1E+BHvXAZqYs2FV53+s8y6W4COFbsLIum1qCYY=,tag:e1zobFGm85Uy4N+5jwi/kQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
