--- a/kubernetes/apps/storage/harbor/init/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/init/secret.sops.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: harbor-init-secret
-    namespace: service
+    namespace: storage
 stringData:
     INIT_POSTGRES_SUPER_PASS: ${POSTGRES_SUPER_PASS}
     INIT_POSTGRES_USER: ${HARBOR_DB_USER}
