--- a/kubernetes/apps/storage/harbor/app/kustomization.yaml
+++ b/kubernetes/apps/storage/harbor/app/kustomization.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: service
+namespace: storage
 resources:
   - ./pvc
   - ./secret.sops.yaml
