--- a/kubernetes/apps/storage/harbor/init/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/init/helmrelease.yaml
@@ -31,6 +31,8 @@ spec:
             image:
               repository: ghcr.io/onedr0p/postgres-init
               tag: 16.2@sha256:3436dfbbc2799332a01361e007e3b408d016cfc235261e1caccc65e6edadf516
+            env:
+              INIT_POSTGRESS_HOST: postgres16-rw.database.svc.cluster.local
             envFrom:
               - secretRef:
                   name: harbor-init-secret
