--- a/kubernetes/apps/storage/harbor/ks.yaml
+++ b/kubernetes/apps/storage/harbor/ks.yaml
@@ -3,13 +3,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: harbor-init
+  name: &app harbor-init
   namespace: flux-system
 spec:
   targetNamespace: storage
   commonMetadata:
     labels:
-      app.kubernetes.io/name: harbor-init
+      app.kubernetes.io/name: *app
   path: ./kubernetes/apps/storage/harbor/init
   prune: true
   sourceRef:
@@ -21,7 +21,7 @@ spec:
   timeout: 25m
   postBuild:
     substitute:
-      APP: harbor-init
+      APP: *app
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
