--- a/kubernetes/apps/storage/harbor/init/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/init/secret.sops.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: harbor-init-secret
-    namespace: storage
 stringData:
     INIT_POSTGRES_SUPER_PASS: ${POSTGRES_SUPER_PASS}
     INIT_POSTGRES_USER: ${HARBOR_DB_USER}
     INIT_POSTGRES_PASS: ${HARBOR_DB_PASSWORD}
     INIT_POSTGRESS_DBNAME: harbor
+    INIT_POSTGRESS_HOST: postgres16-rw.database.svc.cluster.local
