--- a/kubernetes/apps/storage/harbor/init/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/init/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
           init:
             image:
               repository: ghcr.io/onedr0p/postgres-init
-              tag: 16.2@sha256:3436dfbbc2799332a01361e007e3b408d016cfc235261e1caccc65e6edadf516
+              tag: 16
             env:
               TZ: *timeZone
             envFrom:
