--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: harbor-secret
     namespace: storage
 stringData:
-    HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:wGRWAmDg1qX1JOJh6aX/hk8nNBYJ+L48,iv:Jmv5VFRDBbdxIpo7BoR2yo/TlNAp3rnWqr3Tai9S24o=,tag:vjUMmtd/kEzBbhsNN6rwXg==,type:str]
+    password: ENC[AES256_GCM,data:K+GZFxJjokPqtLX9xhNFAEU6m+pZyBxj,iv:YBrWaCXuDJPamA/9nLTS3nkY/RlT/H3s5ba0WuIWn4A=,tag:kTRSt4tP5uKEABEzC4/rSw==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:m+Kgeg6X,iv:KKqdOqOBZZQPOJX21E/DocOqwXULTwHzM1TSQGU38Vk=,tag:jPqCYPM1gKC+InUxZNit1g==,type:str]
     POSTGRES_USER: ENC[AES256_GCM,data:D+FYNHk2U60Og12xrBdjP2k=,iv:0l88WtsKdWAfx0z7FVGAKX3zMvnUIfvuhCVQHY9P3RE=,tag:Bhx6GHU8uabJo3pDOjJIGA==,type:str]
     POSTGRES_PASS: ENC[AES256_GCM,data:ZfNQwZmzO3x/gHObdVYbV2ULuKFP,iv:PGRC7/Lg296aYfP2GBUh1pk+VuFOWLqwFACIsbVeLZo=,tag:svozALldrMdXlwEojVnbnA==,type:str]
@@ -24,8 +24,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-16T01:15:27Z"
-    mac: ENC[AES256_GCM,data:X3ZCMUgD9YBzranwpebCqr2NAYszuWQy34kdokesSLUpcutumgghtf3AwCaHAlB9tp6q407CmOkN9oSHQnKH2gOY2dt589R834+4NHJ/WSmdmWwAL9+zbIgdbxelocFTB9p7WxXKp2X4s9e6W60bOWmFDRavmt5TMxlrYiOdOxM=,iv:Cstib1E+BHvXAZqYs2FV53+s8y6W4COFbsLIum1qCYY=,tag:e1zobFGm85Uy4N+5jwi/kQ==,type:str]
+    lastmodified: "2024-04-16T23:53:35Z"
+    mac: ENC[AES256_GCM,data:BHFuUNLbZsw5lE04tcs79VR28TA5ON/hLJo4RL0ko04RNdsWB3S8KCsCKpEvnxUjeDpD+Miv1WBHLN9AbEOEYzDbM6lLnRGXgyROBKAhhBCOBck7i5xj86wIIkKPq3U8uE8NUCuB2hyts22bwSY+NQ6pqLrgSJKN8VkCQGVmymk=,iv:BOZ0EUHhs69bNMJ7fYGohsr+h2R7X61JRkNzFlNqQy4=,tag:pHcpIedECImWEBd432OIyA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
