--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: storage
 stringData:
     password: ENC[AES256_GCM,data:K+GZFxJjokPqtLX9xhNFAEU6m+pZyBxj,iv:YBrWaCXuDJPamA/9nLTS3nkY/RlT/H3s5ba0WuIWn4A=,tag:kTRSt4tP5uKEABEzC4/rSw==,type:str]
+    HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:nQ4yE5My4WJSeMfAIbAaYWHFN+dFmDVb,iv:YiSJ24jNu/OIo2EmsN1e7nV9N3tZ9D8cD9eobns6bbo=,tag:AHZKwJiMi9+3EGnddT57Cg==,type:str]
     POSTGRES_DB: ENC[AES256_GCM,data:m+Kgeg6X,iv:KKqdOqOBZZQPOJX21E/DocOqwXULTwHzM1TSQGU38Vk=,tag:jPqCYPM1gKC+InUxZNit1g==,type:str]
     POSTGRES_USER: ENC[AES256_GCM,data:D+FYNHk2U60Og12xrBdjP2k=,iv:0l88WtsKdWAfx0z7FVGAKX3zMvnUIfvuhCVQHY9P3RE=,tag:Bhx6GHU8uabJo3pDOjJIGA==,type:str]
     POSTGRES_PASS: ENC[AES256_GCM,data:ZfNQwZmzO3x/gHObdVYbV2ULuKFP,iv:PGRC7/Lg296aYfP2GBUh1pk+VuFOWLqwFACIsbVeLZo=,tag:svozALldrMdXlwEojVnbnA==,type:str]
@@ -24,8 +25,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-16T23:53:35Z"
-    mac: ENC[AES256_GCM,data:BHFuUNLbZsw5lE04tcs79VR28TA5ON/hLJo4RL0ko04RNdsWB3S8KCsCKpEvnxUjeDpD+Miv1WBHLN9AbEOEYzDbM6lLnRGXgyROBKAhhBCOBck7i5xj86wIIkKPq3U8uE8NUCuB2hyts22bwSY+NQ6pqLrgSJKN8VkCQGVmymk=,iv:BOZ0EUHhs69bNMJ7fYGohsr+h2R7X61JRkNzFlNqQy4=,tag:pHcpIedECImWEBd432OIyA==,type:str]
+    lastmodified: "2024-04-16T23:56:46Z"
+    mac: ENC[AES256_GCM,data:/GS6niv1hSRD/DOW65gFy8Xlv46nu19ti4rI90AXh+fvrk/G79VNlyDqptRkwvWP3gjjFEinCu/qQI6OfETHeMhijyAd4tE0Uh2hEmZomNZNE2DWqkVxxQGdYFHTdAtIBTG/zNTEdB9kyLeJD7nt972gqv6DKHt4z3y9XYenuiM=,iv:/8qa9r/LZOXWaX0oqfsjqB00JFJKZhN0ss/9rJHziy4=,tag:1uSQZGfr444AwxMCkYAUjQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
