--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -10,6 +10,7 @@ stringData:
     POSTGRES_USER: ENC[AES256_GCM,data:D+FYNHk2U60Og12xrBdjP2k=,iv:0l88WtsKdWAfx0z7FVGAKX3zMvnUIfvuhCVQHY9P3RE=,tag:Bhx6GHU8uabJo3pDOjJIGA==,type:str]
     POSTGRES_PASS: ENC[AES256_GCM,data:ZfNQwZmzO3x/gHObdVYbV2ULuKFP,iv:PGRC7/Lg296aYfP2GBUh1pk+VuFOWLqwFACIsbVeLZo=,tag:svozALldrMdXlwEojVnbnA==,type:str]
     POSTGRES_PORT: ENC[AES256_GCM,data:pPdmgw==,iv:cOJE3y2l9G1Z6xdgLLdj8d1pms10Szb5saYNqYg37dA=,tag:NOKUq0TKTPitKgH3+k8M9w==,type:str]
+    POSTGRES_HOST: ENC[AES256_GCM,data:oNjmaFri21lBDKoIyQoMPBys96JaLhnx0EIS90NH8RuQWxZ7ZXmAZA==,iv:QLf10H/ewrbAZPyoxUwySeh8EB0diApE0ZrmdNF+BUQ=,tag:djESbGWUby9E33rnqqJSQQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +26,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-16T23:56:46Z"
-    mac: ENC[AES256_GCM,data:/GS6niv1hSRD/DOW65gFy8Xlv46nu19ti4rI90AXh+fvrk/G79VNlyDqptRkwvWP3gjjFEinCu/qQI6OfETHeMhijyAd4tE0Uh2hEmZomNZNE2DWqkVxxQGdYFHTdAtIBTG/zNTEdB9kyLeJD7nt972gqv6DKHt4z3y9XYenuiM=,iv:/8qa9r/LZOXWaX0oqfsjqB00JFJKZhN0ss/9rJHziy4=,tag:1uSQZGfr444AwxMCkYAUjQ==,type:str]
+    lastmodified: "2024-04-17T00:08:26Z"
+    mac: ENC[AES256_GCM,data:fJXxipYKrGo/Hi19eEdA5ysSMu7MySeRK9fstQpPRGFLzAmPxk8NSlA9BR6YEYpWE7E1dcttceeiiy7L7rmiMhGBw8lDAdv2km7fLCcNRjOt5XaRYQmIlfVGPFJGFARcYJ/rqqSBoWc9Z0mPbGR8W/MP1Nn/cf6jrqYJFPGyKWQ=,iv:PjhjUFrwcnVGOMzjdLcjP199qz/O0HVJe6jLVnDMtfQ=,tag:d9dw4t87cvgbWQNvxIEjlA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
