--- a/kubernetes/apps/storage/harbor/init/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/init/secret.sops.yaml
@@ -6,5 +6,5 @@ stringData:
     INIT_POSTGRES_SUPER_PASS: ${POSTGRES_SUPER_PASS}
     INIT_POSTGRES_USER: ${HARBOR_DB_USER}
     INIT_POSTGRES_PASS: ${HARBOR_DB_PASSWORD}
-    INIT_POSTGRES_DBNAME: harbor
+    INIT_POSTGRES_DBNAME: ${HARBOR_DB_USER}
     INIT_POSTGRES_HOST: postgres16-rw.database.svc.cluster.local
