--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -66,10 +66,10 @@ spec:
     database:
       type: external
       external:
-        host: ${{POSTGRES_HOST}}
-        port: ${{POSTGRES_PORT}}
-        username: ${{POSTGRES_USER}}
-        coreDatabase: ${{POSTGRES_DB}}
+        host: ${POSTGRES_HOST}
+        port: ${POSTGRES_PORT}
+        username: ${POSTGRES_USER}
+        coreDatabase: ${POSTGRES_DB}
         existingSecret: *secret
         sslmode: "disable"
     redis:
