--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -4,13 +4,12 @@ metadata:
     name: harbor-secret
     namespace: storage
 stringData:
-    password: ENC[AES256_GCM,data:K+GZFxJjokPqtLX9xhNFAEU6m+pZyBxj,iv:YBrWaCXuDJPamA/9nLTS3nkY/RlT/H3s5ba0WuIWn4A=,tag:kTRSt4tP5uKEABEzC4/rSw==,type:str]
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:nQ4yE5My4WJSeMfAIbAaYWHFN+dFmDVb,iv:YiSJ24jNu/OIo2EmsN1e7nV9N3tZ9D8cD9eobns6bbo=,tag:AHZKwJiMi9+3EGnddT57Cg==,type:str]
-    POSTGRES_DB: ENC[AES256_GCM,data:m+Kgeg6X,iv:KKqdOqOBZZQPOJX21E/DocOqwXULTwHzM1TSQGU38Vk=,tag:jPqCYPM1gKC+InUxZNit1g==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:D+FYNHk2U60Og12xrBdjP2k=,iv:0l88WtsKdWAfx0z7FVGAKX3zMvnUIfvuhCVQHY9P3RE=,tag:Bhx6GHU8uabJo3pDOjJIGA==,type:str]
-    POSTGRES_PASS: ENC[AES256_GCM,data:ZfNQwZmzO3x/gHObdVYbV2ULuKFP,iv:PGRC7/Lg296aYfP2GBUh1pk+VuFOWLqwFACIsbVeLZo=,tag:svozALldrMdXlwEojVnbnA==,type:str]
-    POSTGRES_PORT: ENC[AES256_GCM,data:pPdmgw==,iv:cOJE3y2l9G1Z6xdgLLdj8d1pms10Szb5saYNqYg37dA=,tag:NOKUq0TKTPitKgH3+k8M9w==,type:str]
-    POSTGRES_HOST: ENC[AES256_GCM,data:oNjmaFri21lBDKoIyQoMPBys96JaLhnx0EIS90NH8RuQWxZ7ZXmAZA==,iv:QLf10H/ewrbAZPyoxUwySeh8EB0diApE0ZrmdNF+BUQ=,tag:djESbGWUby9E33rnqqJSQQ==,type:str]
+    password: ENC[AES256_GCM,data:ghKCMxU7ZYE+tRUR5eIpeRYhXF2i,iv:WMa8r38RCoxi3AtFWgdUAR1yRA3W/e5nViOIap9HuiY=,tag:db42ctmxSm7MNFW/PtUNDg==,type:str]
+    host: ENC[AES256_GCM,data:ZZVrhd7ISTgA1sb6zbiGLVwbdbpYaBqeA7ZTkXb5rscaiARRLpHWSA==,iv:v8iIbzA9XK3FzwL00k9bsOz3bMDTZeJtOsz6MaX8QaM=,tag:csDUyShGW8ZuO3z9z34w5g==,type:str]
+    port: ENC[AES256_GCM,data:aSl8zQ==,iv:1u3sz82E9vLCkB7chyzK/h1bqxBzG4iZW3ze2tYFMls=,tag:H+l4ThH3u/CVfr2iYUcSkw==,type:str]
+    username: ENC[AES256_GCM,data:4sbdyoFGK/V7YZmn/f8fqj0=,iv:FWsyLFnIWJuDrbmgCRCCkpkS/YIp/6A2wLyIhpHl98I=,tag:mlNV9nddSTrLQ8dv5E8KfQ==,type:str]
+    coreDatabase: ENC[AES256_GCM,data:WL8iPbTf,iv:h7TKpFqLR6+/T8D+yM353n1q8Zef1kgFvAPbjhQE9qU=,tag:hxWVFvTQfXtRb5pYmATtMQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +25,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-17T00:08:26Z"
-    mac: ENC[AES256_GCM,data:fJXxipYKrGo/Hi19eEdA5ysSMu7MySeRK9fstQpPRGFLzAmPxk8NSlA9BR6YEYpWE7E1dcttceeiiy7L7rmiMhGBw8lDAdv2km7fLCcNRjOt5XaRYQmIlfVGPFJGFARcYJ/rqqSBoWc9Z0mPbGR8W/MP1Nn/cf6jrqYJFPGyKWQ=,iv:PjhjUFrwcnVGOMzjdLcjP199qz/O0HVJe6jLVnDMtfQ=,tag:d9dw4t87cvgbWQNvxIEjlA==,type:str]
+    lastmodified: "2024-04-17T00:30:13Z"
+    mac: ENC[AES256_GCM,data:fJYTmSnC3fQ1Ojjs7SR8JM2bko74ESCChCA6BS4eYO6KFzZQdNfVUWTn4WqVL5p0xJ77kCmnJYsV9bXvUjU2tMBWvhSqv/PDGnkuRoSNvFYiWNv4+65jWIRtYNWQRV1d5EgtnLPfIoZqhdkBx0t5N1HmRT/fnZ+5hw7YIRdou7s=,iv:ztGxYE/PBQ4uaINwHezzBmp4U74YbXn1g7hJgKuPoMY=,tag:NoZ0xJcAL06snKzEfwCLhQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
