--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -408,13 +408,13 @@ snapshots:
 go2rtc:
   streams:
     gates_hq:
-      # - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      # - "ffmpeg:gates_hq#audio=aac"
-      - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101#video=h265#hardware#audio=copy#audio=aac"
+      - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
+      - "ffmpeg:gates_hq#video=h265#hardware#audio=aac"
+      # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101#video=h265#hardware#audio=copy#audio=aac"
     gates_lq:
-      # - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      # - "ffmpeg:gates_lq#audio=aac"
-      - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
+      - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
+      - "ffmpeg:gates_lq#video=h265#hardware#audio=aac"
+      # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
