--- a/kubernetes/apps/storage/harbor/app/secret.sops.yaml
+++ b/kubernetes/apps/storage/harbor/app/secret.sops.yaml
@@ -6,6 +6,8 @@ metadata:
 stringData:
     HARBOR_ADMIN_PASSWORD: ENC[AES256_GCM,data:nQ4yE5My4WJSeMfAIbAaYWHFN+dFmDVb,iv:YiSJ24jNu/OIo2EmsN1e7nV9N3tZ9D8cD9eobns6bbo=,tag:AHZKwJiMi9+3EGnddT57Cg==,type:str]
     password: ENC[AES256_GCM,data:J/KmMDPj9S50Z6KBn3l3UtCPUj6e,iv:zPJFlQ/yDuRjd4jPeaRDDjF47oSm52uB2Ah/TcHzobg=,tag:ftTgM4XFI1G7hei5+qX50Q==,type:str]
+    REGISTRY_PASSWD: ENC[AES256_GCM,data:BDxgKG83vN7c8g==,iv:Qi6jEWvVWYkrbFlVOM/3gxm/NJDo2+aHNMzZh58z9H4=,tag:c6gx5TeiIMS8Okb8iyk8zw==,type:str]
+    REGISTRY_HTPASSWD: ENC[AES256_GCM,data:7LV7A9ketl97fA==,iv:tSNir0fl+D0nkyGlQil1KIC8ZYLr5KYxwJowUpLZVSU=,tag:IBDUmPnQw/u9fUyDPRTcsg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +23,8 @@ sops:
             YVlVL3Y0VnlWaG1takNtMVBzMXU0Q1UKT8qLuzSgM3Y99k7fb0Srr/Nbg0Z8ixWA
             yUEkQNUDDTxtjYI9WxqADBd20TvvzDY6P+DYNZ55e9kZdgkRWAGfvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-04-17T00:35:56Z"
-    mac: ENC[AES256_GCM,data:Co0c5UBQcj6OrFnNP8C9lUdePdTRjoO2Jnb7KxnvcrUop5uHxPubTow1orzL3NnqZU3qF1MIFQNUnA9qdmkVOmHv5NmpVONThvi4za3DISZWw+iK9HRqQjXkqySDTtMXnTR4xVP5MrAdhjc/z/tuV1ItpiDXRPmCi3oFl0UDT3I=,iv:ZmO2yRs9AifNptxzpSFpB6EoxO1B05S2csdXgxw6ysA=,tag:XVQGT37rb1sZ/acGflrg5g==,type:str]
+    lastmodified: "2024-04-18T19:45:21Z"
+    mac: ENC[AES256_GCM,data:a4ds0sKqsEMiN/46vSX3/fS5o8gD1nUKcPSWFXylA2bBCL4KJKTKP2wP0VZPEbh0K/FYUEHdvtYDR138o43pz/PLZ75bXNLTJ+yCX2upzIBsuQu52g1bO6u7Qp+8txV7R61QvGtv3zL7ncLBi0OXuDra3+bOGF5RaZdVqWzSdbU=,iv:YSzhofHx57l8ha7El/6ao7x0ahO5jtO3kzxTEYeVxR8=,tag:fGQ+h7xIdK/+z6Rw6OiYBw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
