--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
         resources:
           requests:
             memory: 256Mi
-            cpu: 100
+            cpu: 100m
       controller:
         resources:
          requests:
