--- a/kubernetes/apps/storage/harbor/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/harbor/app/helmrelease.yaml
@@ -154,7 +154,7 @@ spec:
           cpu: 200m
           memory: 512Mi
         limits:
-          cpu: 1
+          cpu: 300m
           memory: 1Gi
       vulnType: "os,library"
       severity: "UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL"
